--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-typography></app-typography> -->
-<app-buttons></app-buttons>
+<!-- <app-buttons></app-buttons> -->
+<app-buttons-toggle></app-buttons-toggle>
 
 
