--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- <app-typography></app-typography> -->
 <!-- <app-buttons></app-buttons> -->
 <!-- <app-buttons-toggle></app-buttons-toggle> -->
-<app-icons></app-icons>
+<!-- <app-icons></app-icons> -->
+<app-badges></app-badges>
 
 
