--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <!-- <app-buttons></app-buttons> -->
 <!-- <app-buttons-toggle></app-buttons-toggle> -->
 <!-- <app-icons></app-icons> -->
-<app-badges></app-badges>
+<!-- <app-badges></app-badges> -->
+<app-progress-spinner></app-progress-spinner>
 
 
