--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <!-- <app-buttons-toggle></app-buttons-toggle> -->
 <!-- <app-icons></app-icons> -->
 <!-- <app-badges></app-badges> -->
-<app-progress-spinner></app-progress-spinner>
+<!-- <app-progress-spinner></app-progress-spinner> -->
+<app-progress-bar></app-progress-bar>
 
 
