--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <!-- <app-icons></app-icons> -->
 <!-- <app-badges></app-badges> -->
 <!-- <app-progress-spinner></app-progress-spinner> -->
-<app-progress-bar></app-progress-bar>
+<!-- <app-progress-bar></app-progress-bar> -->
+<app-navbar></app-navbar>
 
 
