--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <!-- <app-badges></app-badges> -->
 <!-- <app-progress-spinner></app-progress-spinner> -->
 <!-- <app-progress-bar></app-progress-bar> -->
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<app-sidenav></app-sidenav>
 
 
