--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 <!-- <app-progress-spinner></app-progress-spinner> -->
 <!-- <app-progress-bar></app-progress-bar> -->
 <!-- <app-navbar></app-navbar> -->
-<app-sidenav></app-sidenav>
+<!-- <app-sidenav></app-sidenav> -->
+<app-menu></app-menu>
 
 
