--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 <!-- <app-progress-bar></app-progress-bar> -->
 <!-- <app-navbar></app-navbar> -->
 <!-- <app-sidenav></app-sidenav> -->
-<app-menu></app-menu>
+<!-- <app-menu></app-menu> -->
+<app-list></app-list>
 
 
