--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- <app-navbar></app-navbar> -->
 <!-- <app-sidenav></app-sidenav> -->
 <!-- <app-menu></app-menu> -->
-<app-list></app-list>
+<!-- <app-list></app-list> -->
+<app-grid-list></app-grid-list>
 
 
