--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
 <!-- <app-sidenav></app-sidenav> -->
 <!-- <app-menu></app-menu> -->
 <!-- <app-list></app-list> -->
-<app-grid-list></app-grid-list>
+<!-- <app-grid-list></app-grid-list> -->
+<app-expansion-panel></app-expansion-panel>
 
 
