--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 <!-- <app-menu></app-menu> -->
 <!-- <app-list></app-list> -->
 <!-- <app-grid-list></app-grid-list> -->
-<app-expansion-panel></app-expansion-panel>
+<!-- <app-expansion-panel></app-expansion-panel> -->
+<app-card></app-card>
 
 
