--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
 <!-- <app-list></app-list> -->
 <!-- <app-grid-list></app-grid-list> -->
 <!-- <app-expansion-panel></app-expansion-panel> -->
-<app-card></app-card>
+<!-- <app-card></app-card> -->
+<app-tabs></app-tabs>
 
 
