--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
 <!-- <app-grid-list></app-grid-list> -->
 <!-- <app-expansion-panel></app-expansion-panel> -->
 <!-- <app-card></app-card> -->
-<app-tabs></app-tabs>
+<!-- <app-tabs></app-tabs> -->
+<app-stepper></app-stepper>
 
 
