Form Field, Input.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
 <!-- <app-expansion-panel></app-expansion-panel> -->
 <!-- <app-card></app-card> -->
 <!-- <app-tabs></app-tabs> -->
-<app-stepper></app-stepper>
+<!-- <app-stepper></app-stepper> -->
+<app-input></app-input>
 
 
