--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 <!-- <app-card></app-card> -->
 <!-- <app-tabs></app-tabs> -->
 <!-- <app-stepper></app-stepper> -->
-<app-input></app-input>
+<!-- <app-input></app-input> -->
+<app-select></app-select>
 
 
