--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
 <!-- <app-tabs></app-tabs> -->
 <!-- <app-stepper></app-stepper> -->
 <!-- <app-input></app-input> -->
-<app-select></app-select>
+<!-- <app-select></app-select> -->
+<app-autocomplete></app-autocomplete>
 
 
