--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
 <!-- <app-stepper></app-stepper> -->
 <!-- <app-input></app-input> -->
 <!-- <app-select></app-select> -->
-<app-autocomplete></app-autocomplete>
+<!-- <app-autocomplete></app-autocomplete> -->
+<app-checkbox></app-checkbox>
+
 
 
