--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,8 @@
 <!-- <app-input></app-input> -->
 <!-- <app-select></app-select> -->
 <!-- <app-autocomplete></app-autocomplete> -->
-<app-checkbox></app-checkbox>
+<!-- <app-checkbox></app-checkbox> -->
+<app-radio-button></app-radio-button>
 
 
 
