--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,8 @@
 <!-- <app-select></app-select> -->
 <!-- <app-autocomplete></app-autocomplete> -->
 <!-- <app-checkbox></app-checkbox> -->
-<app-radio-button></app-radio-button>
+<!-- <app-radio-button></app-radio-button> -->
+<app-date-picker></app-date-picker>
 
 
 
