--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 <!-- <app-autocomplete></app-autocomplete> -->
 <!-- <app-checkbox></app-checkbox> -->
 <!-- <app-radio-button></app-radio-button> -->
-<app-date-picker></app-date-picker>
+<app-tooltip></app-tooltip>
 
 
 
