--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,8 @@
 <!-- <app-autocomplete></app-autocomplete> -->
 <!-- <app-checkbox></app-checkbox> -->
 <!-- <app-radio-button></app-radio-button> -->
-<app-tooltip></app-tooltip>
+<!-- <app-tooltip></app-tooltip> -->
+<app-snackbar></app-snackbar>
 
 
 
