--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,8 @@
 <!-- <app-checkbox></app-checkbox> -->
 <!-- <app-radio-button></app-radio-button> -->
 <!-- <app-tooltip></app-tooltip> -->
-<app-snackbar></app-snackbar>
+<!-- <app-snackbar></app-snackbar> -->
+<app-dialog></app-dialog>
 
 
 
