--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,8 @@
 <!-- <app-radio-button></app-radio-button> -->
 <!-- <app-tooltip></app-tooltip> -->
 <!-- <app-snackbar></app-snackbar> -->
-<app-dialog></app-dialog>
+<!-- <app-dialog></app-dialog> -->
+<app-data-table></app-data-table>
 
 
 
