--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -1,3 +1,9 @@
+<mat-form-field>
+    <input (keyup)="applyFilter($event.target.value)" matInput placeholder="Filter">
+</mat-form-field>
+
+<br/><br/>
+
 <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- Position Column -->
     <!-- <ng-container matColumnDef="positions"> -->
