--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,8 @@
 <!-- <app-tooltip></app-tooltip> -->
 <!-- <app-snackbar></app-snackbar> -->
 <!-- <app-dialog></app-dialog> -->
-<app-data-table></app-data-table>
+<!-- <app-data-table></app-data-table> -->
+<app-virtual-scrolling></app-virtual-scrolling>
 
 
 
